--- a/style.css
+++ b/style.css
@@ -478,3 +478,64 @@ footer p{
         margin:0;
     }
 }
+
+
+@media screen and (max-width: 425px){
+    .nav-bar{
+        visibility: hidden;
+        
+    }
+
+    .home >div> h1{
+        font-size: 56px;
+        margin-top: 30px;
+    }
+    .home >div> p{
+        font-size: 25px;
+        margin: 60px 10px;
+    }
+
+    .projects {
+        margin: 20px;
+        padding: 20px 2%;
+        height: 310vh;
+    }
+}
+
+
+@media screen and (max-width: 375px){
+    
+
+    .home >div> h1{
+        font-size: 50px;
+        margin-top: 20px;
+    }
+   
+
+    .about{
+        height: 170vh;
+    }
+
+    .projects {
+        margin: 20px;
+        padding-top: 50px;
+        height: 315vh;
+    }
+}
+
+@media screen and (max-width: 320px){
+    
+
+    .home >div> h1{
+        font-size: 40px;
+        margin-top: 20px;
+    }
+   
+
+
+    .projects {
+        margin: 20px;
+        padding-top: 50px;
+        height: 340vh;
+    }
+}
